# snake

./: .clang-format  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  codecheck.sh  definition.hpp  gameobject.cpp  gameobject.hpp  main.cpp  matrix.cpp  matrix.hpp  playground.cpp  playground.hpp  snake.cpp  snake.hpp  utils.cpp  utils.hpp
